location button fix alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -93,8 +93,8 @@ input::placeholder {
 
 .search-icon {
   position: absolute;
-  left: 12px;
-  top: 16px;
+  left: 8px;
+  top: 11px;
   z-index: 1;
   color: #848484;
 }
@@ -354,6 +354,10 @@ input::-webkit-inner-spin-button {
 @media screen and (max-width: 992px) {
   .MuiDrawer-docked .MuiDrawer-paper {
     display: none;
+  }
+
+  .drag-drop {
+    height: 81px;
   }
 
   .sidebar__box nav {
